@@ -1,11 +1,11 @@
 #!/bin/bash
 SCRIPTPATH="$( cd "$(dirname "$0")" ; pwd -P )"
 
-dominstallproperties="$1"
-domibusproperties="$2"
-
 # Set DEBUG TO 1 to activate debugging
 DEBUG=0
+
+DomibusInstallationDir=/data/domibus
+echo "--------------DomibusInstallationDir: ${DomibusInstallationDir}"
 
 function displayBanner {
    cat ${SCRIPTPATH}/scripts/textBanner.txt
@@ -17,78 +17,18 @@ function sourceExternalFunctions {
    echo ; echo "Sourcing External Functions:"
 
    . ${SCRIPTPATH}/scripts/functions/common.functions
-   . ${SCRIPTPATH}/scripts/functions/initDatabaseMySQL.functions
-   . ${SCRIPTPATH}/scripts/functions/initDatabaseOracle.functions
-   . ${SCRIPTPATH}/scripts/functions/initDatabaseMsSQL.functions
-   . ${SCRIPTPATH}/scripts/functions/downloadJDKJRE.functions
    . ${SCRIPTPATH}/scripts/functions/downloadJDBC.functions
-   . ${SCRIPTPATH}/scripts/functions/downloadSoftware.functions
    . ${SCRIPTPATH}/scripts/functions/getDomibus.functions
    . ${SCRIPTPATH}/scripts/functions/configureDomibus.functions
-   . ${SCRIPTPATH}/scripts/functions/Tomcat.functions
    . ${SCRIPTPATH}/scripts/functions/WildFly.functions
    . ${SCRIPTPATH}/scripts/functions/WebLogic.functions
-}
-
-function defineColors {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   #export COLOR_LIGHT_RED='\e[1;31m'
-   #fail_color='\033[1;31m'
-   #pass_color="\033[32;1m\]"
-   #color_end="\033[0m\]"
-   echo
-}
-
-function checkDomInstallPropertiesFiles {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   if [ "${dominstallproperties}" == "" ] ; then
-      ABORT_JOB "The MANDATORY 'domInstall.properties' properties file is not specified..."
-   else
-      if [ ! -f ${dominstallproperties} ] ; then
-         ABORT_JOB "The mentioned \"domInstall.properties\" (${domibusproperties}) properties file DOES NOT EXIST..."
-      else
-         echo
-         echo "   DOMIBUS INSTALLATION WILL BE PERFORMED WITH THE FOLLOWING FILE:"
-         echo
-         echo "   - ${dominstallproperties}"
-         echo
-      fi
-   fi
-}
-
-function checkDomibusPropertiesFiles {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   if [ "${domibusproperties}" == "" ] ; then
-      echo
-      echo "The mentioned \"dominstall.properties\" (${dominstallproperties}) properties file is NOT SPECIFIED"
-      echo
-      echo "   PERFORMING A DEFAULT INSTALLATION"
-      echo
-   else
-      if [ ! -f "${domibusproperties}" ] ; then
-         ABORT_JOB "The mentioned \"domibus.properties\" (${domibusproperties}) properties file DOES NOT EXIST..."
-      else
-         echo
-         echo "   DOMIBUS CONFIGURATION WILL BE PERFORMED WITH THE FOLLOWING FILE:"
-         echo
-         echo "   - ${domibusproperties}"
-         echo
-      fi
-   fi
 }
 
 function getDomibusInstallProperties {
    displayFunctionBanner ${FUNCNAME[0]}
 
-   source ${dominstallproperties}
-   #source ${domibusproperties}
-
    echo "DownloadJAVA					: ${DownloadJAVA}"
    echo "DownloadJDBC					: ${DownloadJDBC}"
-   echo "DownloadDomibus				: ${DownloadDomibus}"
    echo
    echo "DomibusInstallationDir				: $DomibusInstallationDir"
    echo
@@ -113,13 +53,6 @@ function getDomibusInstallProperties {
       echo "OracleDatabaseUserId                         : ${OracleDatabaseUserId}"
       echo "OracleDatabaseUserPassword                   : ${OracleDatabaseUserPassword}"
    fi
-   if [ "${DatabaseType}" == "SQLServer" ] ; then
-      echo "SQLServerDatabaseHost                        : ${SQLServerDatabaseHost}"
-      echo "SQLServerDatabasePort                        : ${SQLServerDatabasePort}"
-      echo "SQLServerDatabaseName                        : ${SQLServerDatabaseName}"
-      echo "SQLServerDatabaseUserId                      : ${SQLServerDatabaseUserId}"
-      echo "SQLServerDatabaseUserPassword                : ${SQLServerDatabaseUserPassword}"
-   fi
 
    echo
    echo "DatabaseInit                                 : ${DatabaseInit}"
@@ -130,11 +63,7 @@ function getDomibusInstallProperties {
    if [ "${DatabaseType}" == "Oracle" ] ; then
       echo "OracleDatabaseSYSPassword                    : ${OracleDatabaseSYSPassword}"
    fi
-   if [ "${DatabaseType}" == "SQLServer" ] ; then
-      echo "SQLServerDatabaseAdminUser                   : ${SQLServerDatabaseAdminUser}"
-      echo "SQLServerDatabaseAdminPwd                    : ${SQLServerDatabaseAdminPwd}"
-   fi
-      
+
    echo
    if [ "${ApplicationServer}" == "WebLogic" ] ; then
       echo "WebLogicDomainName                           : $WebLogicDomainName"
@@ -171,41 +100,6 @@ function getDomibusInstallProperties {
       echo "WildFlyNetManagementInterface                : $WildFlyNetManagementInterface:$WildFlyNetManagementPort"
       echo "WildFlyNetUnsecureInterface                  : $WildFlyNetUnsecureInterface:$WilfFlyNetUnsecurePort"
    fi
-
-#   domibus_msh_messageid_suffix=`grep domibus.msh.messageid.suffix ${domibusproperties} | cut -d"=" -f2-`
-
-#   domibus_security_keystore_location="`grep '^domibus.security.keystore.location' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_keystore_type="`grep '^domibus.security.keystore.type' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_keystore_password="`grep '^domibus.security.keystore.password' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_key_private_alias="`grep '^domibus.security.key.private.alias' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_key_private_password="`grep '^domibus.security.key.private.password' ${domibusproperties} | cut -d'=' -f2-`"
-
-#   domibus_security_truststore_location="`grep '^domibus.security.truststore.location' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_truststore_type="`grep '^domibus.security.truststore.type' ${domibusproperties} | cut -d'=' -f2-`"
-#   domibus_security_truststore_password="`grep '^domibus.security.truststore.password' ${domibusproperties} | cut -d'=' -f2-`"
-
-#   activeMQ_broker_host="`grep '^activeMQ.broker.host' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_brokerName="`grep '^activeMQ.brokerName' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_embedded_configurationFile="`grep '^activeMQ.embedded.configurationFile' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_JMXURL="`grep '^activeMQ.JMXURL' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_connectorPort="`grep '^activeMQ.connectorPort' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_rmiServerPort="`grep '^activeMQ.rmiServerPort' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_transportConnector_uri="`grep '^activeMQ.transportConnector.uri' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_username="`grep '^activeMQ.username' ${domibusproperties} | cut -d'=' -f2-`"
-#   activeMQ_password="`grep '^activeMQ.password' ${domibusproperties} | cut -d'=' -f2-`"
-
-   #for line in `cat ${domibus.properties}` ; do
-   # while read -r line ; do
-   #   if [ ! "${line:1:1}" == "#" ] ; then
-   #      param="$line" ; echo $param
-   #      param1="`echo ${param} | cut -d'=' -f1 | sed s'/\.//g'`"
-   #      param2="`echo ${param} | cut -d'=' -f2`"
-   #	 echo "$param1=$param2" | tee toto
-   #   else
-   #      echo "###########"
-   #   fi
-   #done < "${domibusproperties}"
-   #done
 
    echo
    echo "DOMIBUS CONFIGURATION"
@@ -252,25 +146,6 @@ function getDomibusInstallProperties {
    echo "JMSPluginAdminPassword                       : $JMSPluginAdminPassword"
    echo "JMSPluginUserPassword                        : $JMSPluginUserPassword"
 
-
-#   while true; do
-#      echo
-#      read -p "ARE YOU SATISFIED WITH THE ABOVE SETTING [YES|NO] or Press CTRL-C TO ABORT ? " answer
-#      case $answer in
-#          [YES]* ) break ;;
-#          [NO]* ) quit ;;
-#          * ) echo "Please answer one of the following choices [YES|NO] or Press CTRL-C TO ABORT ";;
-#      esac
-#  done
-}
-
-function killAllWildFlyInstance {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   # Killing all WildFly Running Instance if any
-   echo ; echo "Killing  all WildFly Running Instance if any..."
-   for pid in `ps -ef | grep wildflyc | grep Djboss | grep  Dlogging.configuration | sed 's/  / /g' | cut -d" " -f2` ; do echo Killing Pid: $pid ; kill $pid ; done
-   #for pid in `ps -ef | grep Djboss | grep  Dlogging.configuration | sed 's/  / /g' | cut -d" " -f3` ; do echo Killing Pid: $pid ; kill $pid ; done
 }
 
 function initInstallation {
@@ -282,6 +157,7 @@ function initInstallation {
 
    # Domibus Directory
    #export DOMIBUS_DIR="$REPO_DIR/domibus"
+   #baciuco DomibusInstallationDir comes from the installation property file; to be removed
    export DOMIBUS_DIR=${DomibusInstallationDir}/domibus
 
    echo ; echo "Setting \${cef_edelivery_path} to ${DomibusInstallationDir}"
@@ -291,31 +167,25 @@ function initInstallation {
    if [ ! -d ${DomibusInstallationDir} ]; then
       echo ; echo "Creating \${DomibusInstallationDir}: mkdir ${DomibusInstallationDir}"
       mkdir -p ${DomibusInstallationDir}
-
-      # Temporary Directory
-      export TEMP_DIR=${DomibusInstallationDir}/temp
-      echo "Creating Temporary Directory: \${TEMP_DIR}"
-      echo " - mkdir ${TEMP_DIR}"
-      mkdir $TEMP_DIR
-
-      # Download Directories
-      #20170812
-      #export DOWNLOAD_DIR=${TEMP_DIR}/downloads
-      export DOWNLOAD_DIR="${SCRIPTPATH}/downloads"
-      echo "Creating Temporary Download Directories: \${DOWNLOAD_DIR}"
-      echo " - mkdir -p ${DOWNLOAD_DIR}"
-      mkdir -p ${DOWNLOAD_DIR}
-      echo " - mkdir -p ${DOWNLOAD_DIR}/Domibus/${DomibusVersion}"
-      mkdir -p ${DOWNLOAD_DIR}/Domibus/${DomibusVersion}
    else
       echo
-      echo "The directory ${DomibusInstallationDir} EXISTS... ABORTING !!!"
-      echo
-      echo "Please remove content manually by executing the statement below and retry..."
-      echo "chmod -R 700 ${DomibusInstallationDir} ; rm -rf  ${DomibusInstallationDir}"
-      #chmod -R 700 /data/dhenech/domibus321_C ; rm -rf  /data/dhenech/domibus321_C
-      ABORT_JOB "The directory ${DomibusInstallationDir} EXISTS... ABORTING !!!"
+      echo "The directory ${DomibusInstallationDir} EXISTS... "
+      ls -la
    fi
+
+    # Temporary Directory; used for storing the cookie.txt
+  export TEMP_DIR=${DomibusInstallationDir}/temp
+  echo "Creating Temporary Directory: \${TEMP_DIR}"
+  echo " - mkdir ${TEMP_DIR}"
+  mkdir $TEMP_DIR
+
+
+  export DOWNLOAD_DIR="${SCRIPTPATH}/downloads"
+  echo "Creating Temporary Download Directories: \${DOWNLOAD_DIR}"
+  echo " - mkdir -p ${DOWNLOAD_DIR}"
+  mkdir -p ${DOWNLOAD_DIR}
+  echo " - mkdir -p ${DOWNLOAD_DIR}/Domibus/${DomibusVersion}"
+  mkdir -p ${DOWNLOAD_DIR}/Domibus/${DomibusVersion}
 
    DOMIBUS_VERSIONS=""
    for domibus_version in `ls -1 $DOWNLOAD_DIR/Domibus` ; do
@@ -323,255 +193,6 @@ function initInstallation {
    done
 
    DOMIBUS_VERSION=$DomibusVersion
-
-   if [ "$DOMIBUS_VERSION" == "3.1.1" ] ; then
-      DOMIBUS_PREFIX="distribution-${DOMIBUS_VERSION}"
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.0" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-7`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.1" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-9`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.2" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-18`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.3-SNAPSHOT" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-$DOMIBUS_VERSION-SNAPSHOT  | cut -c1-18`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.3" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-18`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.4" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-18`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.2.5" ] ; then
-      DOMIBUS_PREFIX=`echo MSH-${DOMIBUS_VERSION}  | cut -c1-18`
-   fi
-   if [ "$DOMIBUS_VERSION" == "3.3" ] ; then
-      DOMIBUS_PREFIX="distribution-${DOMIBUS_VERSION}"
-   fi
-   if [ "$DOMIBUS_VERSION" == "4.0-SNAPSHOT" ] ; then
-      DOMIBUS_PREFIX="distribution-${DOMIBUS_VERSION}"
-   fi
-
-   echo ; echo "\$DOMIBUS_PREFIX=$DOMIBUS_PREFIX"
-}
-
-function initDatabase {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   if [ "${DatabaseType}" == "MySQL" ] ; then
-      echo "Initialazing Database : Calling initDatabaseMySQL"
-      initDatabaseMySQL
-   fi
-   if [ "${DatabaseType}" == "Oracle" ] ; then
-      echo "Initialazing Database: Calling initDatabaseOracle"
-      initDatabaseOracle
-   fi
-}
-
-function checkMD5Signatures {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo $'\nDisplaying & Controlling MD5 signature'
-   for file in $DOWNLOAD_DIR/Domibus/$DOMIBUS_VERSION/* ; do md5sum $file ; done
-}
-
-function createDomibusConfDir {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo  ; echo "Creating Directory: ${cef_edelivery_path}/domibus/conf/domibus"
-   [ -d ${cef_edelivery_path}/domibus/conf/domibus ] || mkdir -p ${cef_edelivery_path}/domibus/conf/domibus
-}
-
-function installDomibusConfiguration {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "unzip -q \$DOWNLOAD_DIR/Domibus/$DOMIBUS_VERSION/domibus-$DOMIBUS_PREFIX-wildfly-configuration.zip -d ${cef_edelivery_path}//domibus/conf/domibus"
-   unzip -q $DOWNLOAD_DIR/Domibus/$DOMIBUS_VERSION/domibus-$DOMIBUS_PREFIX-wildfly-configuration.zip -d ${cef_edelivery_path}/domibus/conf/domibus
-}
-
-function extractStandAloneFromFull {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-echo ; echo "Extracting standalone-full.xml from $DOWNLOAD_DIR/domibus-$DOMIBUS_VERSION-wildfly-full.zip to \$TEMP_DIR/standalone-full.xml_FROM_FULL"
-unzip -p $DOWNLOAD_DIR/Domibus/$DOMIBUS_VERSION/domibus-$DOMIBUS_PREFIX-wildfly-full.zip domibus/standalone/configuration/standalone-full.xml > $TEMP_DIR/standalone-full.xml_FROM_FULL
-}
-
-function generateKeystore {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo "   Generating \" ${KeystoreName}\" Keystore in ${cef_edelivery_path}/domibus/conf/domibus/keystores"
-   keytool -genkey -keyalg RSA -alias ${KeystorePrivateKeyAlias} -keypass ${KeystorePrivateKeyPassword} \
-      -keystore ${cef_edelivery_path}/domibus/conf/domibus/keystores/${KeystoreName} -storepass ${KeystorePassword} -validity 360 \
-      -keysize 2048 \
-      -dname "CN=${LocalPartnerId}, OU=CEF Support, O=B4, L=Brussels, ST=Unknown, C=BE"
-}
-
-function installKeystore {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   if  [ ! ${DOMIBUS_VERSION:0:3} == "3.3" ] && [ ! ${DOMIBUS_VERSION:0:3} == "4.0" ] && [ ! ${DOMIBUS_VERSION} == "LATEST" ] ; then
-   echo ; echo "Installing keystore \" ${KeystoreName}\" in \${cef_edelivery_path}/domibus/conf/domibus/keystores"
-   if [ ! -d  ${cef_edelivery_path}/domibus/conf/domibus/keystores ] ; then
-      mkdir ${cef_edelivery_path}/domibus/conf/domibus/keystores
-   fi
-   
-#   generateKeystore
-#
-#   echo "   Configuring Keystore Private Key Alias and Password"
-#   initialString="<entry key=\"blue_gw\" value=\"test123\"/>"
-#   replacedString="<entry key=\"${domibus_security_key_private_alias}\" value=\"${domibus_security_key_private_password}\"/>"
-#   targetFile="${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml"
-#   echo "   Replacing : ${initialString}"
-#   echo "   By        : ${replacedString}"
-#   echo "   In file   : ${targetFile}"
-#   sed -i -e "s#${initialString}#${replacedString}#" ${targetFile}
-#
-#   echo ; echo "   Configuring Keystore Name in \${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml"
-#   initialString="<prop key=\"org.apache.ws.security.crypto.merlin.keystore.password\">"
-#   sed -i -e "/${initialString}/!b;n;c           ${KeystorePassword}" ${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml
-#   echo "   Configuring keystore Password in ${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml"
-#   initialString="<prop key=\"org.apache.ws.security.crypto.merlin.file\">"
-#   sed -i -e "/${initialString}/!b;n;c${KeystoreName}" ${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml
-#   echo "   Configuring Private Key Password"
-#   searchString="<prop key=\"org.apache.ws.security.crypto.merlin.keystore.private.password\">"
-#   sed -i -e "/${searchString}/!b;n;c${KeystorePrivateKeyPassword}" ${cef_edelivery_path}/domibus/conf/domibus/domibus-security.xml
-#   else
-#      echo ; echo "PROVIDED BY DOMIBUS.PROPERTIES:"
-#      echo
-#      echo "domibus.security.keystore.location             : ${domibus_security_keystore_location}"
-#      echo "domibus.security.keystore.type                 : ${domibus_security_keystore_type}"
-#      echo "domibus.security.keystore.password             : ${domibus_security_keystore_password}"
-#      echo "domibus.security.key.private.alia              : ${domibus_security_key_private_alias}"
-#      echo "domibus.security_key.private.password          : ${domibus_security_key_private_password}"
-   fi
-}
-
-function compareXML {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   diff ${cef_edelivery_path}/domibus/standalone/configuration/${WildFlyServerConfig}.xml $TEMP_DIR/${WildFlyServerConfig}.xml_FROM_FULL
-}
-
-function deployDomibusWarFile {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "Deploying domibus-${DOMIBUS_PREFIX}-wildfly.war: ${cef_edelivery_path}/domibus}/bin/jboss-cli.sh <<EOF"
-   ${cef_edelivery_path}/domibus/bin/jboss-cli.sh <<EOF
-
-embed-server --server-config=${WildFlyServerConfig}.xml
-
-deploy --force ${DOWNLOAD_DIR}/Domibus/${DOMIBUS_VERSION}/domibus-${DOMIBUS_PREFIX}-wildfly.war
-
-exit
-EOF
-}
-
-function startDomibus {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "Starting Domibus-wildfly: nohup ${cef_edelivery_path}/domibus/bin/standalone.sh --server-config=${WildFlyServerConfig}.xml > ${cef_edelivery_path}/domibus/domibus-wildfly.log 2>&1 &"
-   nohup ${cef_edelivery_path}/domibus/bin/standalone.sh --server-config=${WildFlyServerConfig}.xml > ${cef_edelivery_path}/domibus/domibus-wildfly.log 2>&1 &
-}
-
-function setJVMParamsTomcat {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo
-   echo "Setting JVM Parameters in \${cef_edelivery_path}/domibus/bin/catalina.sh"
-   #MyLine='"\nexport CATALINA_HOME=\""$DOMIBUS_DIR\/domibus\""\nexport JAVA_OPTS=\""\$JAVA_OPTS -Xms128m -Xmx1024m -XX:MaxPermSize=256m\""\nexport JAVA_OPTS=\""\$JAVA_OPTS -Ddomibus.config.location=\$CATALINA_HOME\/conf\/domibus\""\n'"
-   MyLine='\nexport JAVA_OPTS="$JAVA_OPTS -Xms128m -Xmx1024m -XX:MaxPermSize=256m"\nexport JAVA_OPTS="$JAVA_OPTS -Ddomibus.config.location=$CATALINA_HOME\/conf\/domibus"\n'
-   #MyLine="\nexport CATALINA_HOME=$DOMIBUS_DIR\/domibus\n"
-   #echo $MyLine
-   #MyLine="${MyLine}export JAVA_OPTS=\"""\$JAVA_OPTS –Xms128m -Xmx1024m -XX:MaxPermSize=256m\"""\n\""
-   #echo $MyLine
-   #MyLine="${MyLine}export JAVA_OPTS=\"""\$JAVA_OPTS -Ddomibus.config.location=\$CATALINA_HOME\/conf\/domibus\"""\n\""
-   #echo $MyLine
-   sed -i "249s/.*/${MyLine}/" ${cef_edelivery_path}/domibus/bin/catalina.sh
-   #sed -i "2s/.*/totoleHero/" $DOMIBUS_DIR/domibus/bin/catalina.sh
-   #cat $DOMIBUS_DIR/domibus/bin/catalina.sh >> $TEMP_DIR/catalina.sh 
-   #mv $TEMP_DIR/catalina.sh  $DOMIBUS_DIR/domibus/bin/catalina.sh
-
-   echo ; echo "Setting \${cef_edelivery_path}/domibus/bin/*.sh as executacle: chmod +x \${cef_edelivery_path}/domibus/bin/*.sh"
-   chmod +x ${cef_edelivery_path}/domibus/bin/*.sh
-}
-
-function enableTNSTomcat {
-   displayFunctionBanner ${FUNCNAME[0]}
-if [ "enableTNS" == "yes" ] ; then
-echo > $DOMIBUS_DIR/conf/domibus/clientauthentication.xml <<EOF
-<http-conf:tlsClientParameters disableCNCheck="true" secureSocketProtocol="TLSv1.2"
-        xmlns:http-conf="http://cxf.apache.org/transports/http/configuration"
-        xmlns:security="http://cxf.apache.org/configuration/security">
-    <security:trustManagers>
-        <security:keyStore type="JKS" password="your_trustore_password"
-                           file="${domibus.config.location}/keystores/your_trustore_ssl.jks"/>
-    </security:trustManagers>
-       <security:keyManagers keyPassword="your_keystore_password">
-        <security:keyStore type="JKS" password="your_keystore_password"
-                           file="${domibus.config.location}/keystores/your_keystore_ssl.jks"/>
-    </security:keyManagers>
-</http-conf:tlsClientParameters>
-EOF
-else
-   rm -f $DOMIBUS_DIR/conf/domibus/clientauthentication.xml
-fi
-}
-
-function enableTNSWildFly {
-   displayFunctionBanner ${FUNCNAME[0]}
-   echo ; echo "Enabling TNS \${DOMIBUS_DIR}/bin/jboss-cli.sh <<EOF"
-   $DOMIBUS_DIR/bin/jboss-cli.sh <<EOF
-/core-service=management/security-realm=ApplicationRealm/server-identity=ssl:add(	\
-keystore-path=../conf/domibus/keystores/gateway_keystore.jks,				\
-keystore-relative-to=jboss.server.config.dir,						\
-keystore-password="test123", alias="blue_gw",						\
-key-password="test123")
-
-/core-service=management/security-realm=ApplicationRealm/authentication=local:remove
-
-/core-service=management/security-realm=ApplicationRealm/authentication=properties:remove
-
-/core-service=management/security-realm=ApplicationRealm/authentication=truststore:add( \
-keystore-path="../conf/domibus/keystores/gateway_truststore.jks",			\
-keystore-relative-to="jboss.server.base.dir",						\
-keystore-password="test123")
-EOF
-}
-
-function configureTNS {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "Configuring TNS" 
-   echo "   To be done..."
-}
-
-function configureDisableCNCheck {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "Configuring disableCNCheck in file ${cef_edelivery_path}/domibus/conf/domibus/domibus-clientauthentication.xml"
-   echo "   Setting \${disableCNCheck} to ${disableCNCheck}"
-   #sed -i -e "s#disableCNCheck=\"true\"#disableCNCheck=\"${disableCNCheck}\"#" ${cef_edelivery_path}/domibus/conf/domibus/domibus-clientauthentication.xml
-}
-
-function configureWSUnsecureLoginAllowed {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   echo ; echo "Configuring WS Plugin Basic Authentication in file \${cef_edelivery_path}/domibus/conf/domibus/domibus-configuration.xml"
-   initialString="<prop key=\"domibus.auth.unsecureLoginAllowed\">false</prop>"
-   replacedString="<prop key=\"domibus.auth.unsecureLoginAllowed\">${WSUnsecureLoginAllowed}</prop>"
-   echo "   Replacing : ${initialString}"
-   echo "   By        : ${replacedString}"
-   sed -i -e "s#${initialString}#${replacedString}#" ${cef_edelivery_path}/domibus/conf/domibus/domibus-configuration.xml
-}
-
-function configureWSPlugin {
-   displayFunctionBanner ${FUNCNAME[0]}
-
-   configureWSUnsecureLoginAllowed
-   configureWSPluginPasswords
 }
 
 #####################################################################################################################
@@ -582,14 +203,11 @@ clear
 
 displayBanner
 sourceExternalFunctions
-checkDomInstallPropertiesFiles
-#checkDomibusPropertiesFiles
 getDomibusInstallProperties
 initInstallation
-downloadJavaJDKJRE
 downloadJDBC
 getDomibus "${DomibusVersion}" "${ApplicationServer}" "${DomibusInstallationType}" "${DOWNLOAD_DIR}/Domibus/${DomibusVersion}"
-initDatabase
+
 
 echo $'\n\nStarting Domibus Installation'
 
@@ -607,17 +225,7 @@ case "$ApplicationServer" in
       esac
       ;;
    "Tomcat") echo ; echo "Installing Tomcat"
-      case "${DomibusInstallationType}" in
-         "Full")  echo "Tomcat Pre-configured Full Deployment"
-            installDomibusTomcatFull
-            ;;
-         "Single")  echo  "Tomcat Single Server Deployment"
-            installDomibusTomcatSingle
-            ;;
-         "Cluster")  echo  "Tomcat Clustered Server Deployment"
-            installDomibusTomcatCluster
-            ;;
-      esac
+       #installDomibusTomcatSingle
       ;;
    "WildFly") echo ; echo "Installing Wildfly"
       case "${DomibusInstallationType}" in
@@ -628,7 +236,7 @@ case "$ApplicationServer" in
             installDomibusWildFlySingle
             ;;
          "Cluster")  echo  "Clustered Server Deployment"
-            installDomibusWildFlyCluster
+
             ;;
       esac
       ;;
